wellesleynet/roles/k8s/files/bitwarden.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bitwarden
  namespace: default
  labels:
    app: bitwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bitwarden
  serviceName: bitwarden
  template:
    metadata:
      labels:
        app: bitwarden
    spec:
      containers:
      - name: bitwarden
        image: vaultwarden/server:1.32.5-alpine
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - mountPath: /data
          name: bitwarden
        livenessProbe:
          exec:
            command:
            - ls
            - /data/lost+found
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: bitwarden
        persistentVolumeClaim:
          claimName: bitwarden
---
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
  namespace: default
  labels:
    app: bitwarden
spec:
  ports:
  - port: 80
    name: bitwarden
  selector:
    app: bitwarden
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/auth-url: "https://authelia.kiski.co/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://authelia.kiski.co"
    kubernetes.io/ingress.class: "nginx"
  name: bitwarden-admin
  namespace: default
spec:
  rules:
  - host: bitwarden.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/admin"
        backend:
          service:
            name: bitwarden
            port:
              number: 80
  tls:
  - hosts:
    - bitwarden.kiski.co
    secretName: bitwarden-kiski-co-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    nginx.ingress.kubernetes.io/client-body-buffer-size: 512m
    kubernetes.io/ingress.class: "nginx"
  name: bitwarden
  namespace: default
spec:
  rules:
  - host: bitwarden.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bitwarden
            port:
              number: 80
  tls:
  - hosts:
    - bitwarden.kiski.co
    secretName: bitwarden-kiski-co-tls
